osso-af-startup (1.6-1) unstable; urgency=low

  * Restarting SystemUI again because fix in af-defines.sh now makes
    it possible.

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Thu, 02 Mar 2006 12:42:35 +0200

osso-af-startup (1.5-1) unstable; urgency=low

  * Added re-reading of DBus session bus address to the restarting
    script in the first boot.
  * Removed restarting of SystemUI in first boot (N#23373).

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Wed, 01 Mar 2006 17:46:21 +0200

osso-af-startup (1.4-1) unstable; urgency=low

  * Removed the sleep after startup greeting.
  * Now using whoami in af-defines.sh, and removed a needless warning.

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Thu, 23 Feb 2006 09:42:39 +0200

osso-af-startup (1.3-1) unstable; urgency=low

  * Fixed dbus-sessionbus.sh to use dsmetool.
  * Fixed the first-boot restarting script (N#23037).
  * Appended user name to DBus address file for multi-user Scratchbox.
  * Added LAUNCHWRAPPER_NICE_KILL that is indentical to ..._NICE
    except that it uses the KILL signal when stopping.

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Fri, 17 Feb 2006 17:41:30 +0200

osso-af-startup (1.2-1) unstable; urgency=low

  * ke-recv is not started anymore, it is now under init.
  * Removed temp-reaper.sh because the C program is now used.
  * Removed dependency to lsof.
  * Removed empty 'startup' directory.

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Thu, 26 Jan 2006 11:19:52 +0200

osso-af-startup (1.1-1) unstable; urgency=low

  * LANGUAGE is now unset in the default 'locale' file (bug 21780).

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Mon, 09 Jan 2006 09:46:35 +0200

osso-af-startup (1.0-1) unstable; urgency=low

  * Modifications for new DBus.
  * AF environment is now included to every shell in /etc/profile.
  * D-BUS session bus now uses an abstract socket and dynamic address.
